[metadata]
author = Thomas Caswell
author_email = tcaswell@gmail.com
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = demo a bug
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = pybindbug
platforms = any
url = https://github.com/tacaswell/pybindbug

[options]
package_dir =
    = lib
packages = find:
python_requires = >=3.10
zip_safe = False

[options.extras_require]
docs =
    docutils <0.18
    sphinx
    sphinx-rtd-theme

[options.packages.find]
where = lib

[flake8]
exclude =
    .git,
    .asv,
    __pycache__,
    build,
max-line-length = 100
per-file-ignores =
    # E402 = module level import not at top of file.
    docs/sphinxext/name_supports.py: E402,
    docs/sphinxext/name_supports_type.py: E402,
    lib/contourpy/util/mpl_renderer.py: E402,
    tests/util_config.py: E402,
    # F401 = module imported but unused.
    docs/conf.py: E402, F401,
